# Flerry

./: .gitignore  LICENSE  README.md  flake.nix  result
flerry/: Cargo.toml
flerry-rs/: Cargo.toml  README.md
flerry-rs/src/flerry-bin/: Cargo.toml
flerry-rs/src/flerry-bin/src/: cli.rs  main.rs
flerry-rs/src/flerry-bin/src/utils/: cli_utils.rs  mod.rs
flerry-rs/src/flerry-compiler/: Cargo.toml
flerry-rs/src/flerry-compiler/src/: compiler.rs  lib.rs
flerry-rs/src/flerry-lexer/: Cargo.toml
flerry-rs/src/flerry-lexer/src/: lexer.rs  lib.rs  test.flerry  token.rs
flerry/src/flerry/: Cargo.toml
flerry/src/flerry-compiler/: Cargo.toml
flerry/src/flerry-compiler/src/: compiler.rs  lib.rs
flerry/src/flerry-core/: Cargo.toml
flerry/src/flerry-core/src/: lib.rs
flerry/src/flerry-lexer/: Cargo.toml
flerry/src/flerry-lexer/src/: lexer.rs  lib.rs  test.flerry
flerry/src/flerry/src/: cli.rs  main.rs
flerry/src/flerry/src/utils/: cli_utils.rs  mod.rs
