[package]
name = "flerry-bin"
version = "0.0.1"
edition = "2024"
authors = ["Affan Ahmad <st_iaffan@Outlook.com>"]
description = """Flerry 0.0.1dev1
A simple playground for a simple language."""

[dependencies]
clap = { workspace = true }
colored = { workspace = true }
flerry-compiler = { path = "../flerry-compiler" }
flerry-lexer = { path = "../flerry-lexer" }

