[package]
name = "flerry"
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["Affan Ahmad <st_iaffan@Outlook.com>"]
description = """Flerry 0.0.1dev1"""

[dependencies]
clap = { workspace = true }
colored = { workspace = true }
flerry-compiler = { path = "../flerry-compiler" }
flerry-lexer = { path = "../flerry-lexer" }

